added travel directions

--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
 
     <h3> The Indian Museum</h3>
     <p>Some of the must watch things are  <b>Mughal Paintings</b> and <b>collections of antiques</b></p>
+    <hr>
+    <h2>Travel directions</h2>
+    <p>The nearest airport to the indian museum is Netaji Subhash Chandra Bose International Airport
+    </p>
+
+    
+
+    <ol>
+        <li>Head south on Jawaharlal Nehru Rd toward Kyd St</li>
+        <li>Take Mirza Ghalib St to Dharamtala St/Lenin Sarani Rd in Esplanade :
+            <ol>
+                <li>Turn left onto Kyd St</li>
+                <li>Turn right onto Dharamtala St/Lenin Sarani Rd $ Turn left after Matilal & Co. </li>
+            </ol>
+        </li>
+        <li>Continue onto Acharya Prafulla Chandra Rd/Sealdah Flyover</li>
+        <li>Keep right to continue on Kestopur - Baguiati Flyover</li>
+    </ol>
+    <p>Some of the other locations around the museum to watch are :</p>
+    <ul>
+        <li>Taj Mahal</li>
+        <li>Rathambore National park</li>
+        <li>Hawa Mahal</li>
+        <li>Qutab Minar</li>
+    </ul>
+    
+
 
 
 </html>
