added travel recommendations

--- a/index.html
+++ b/index.html
@@ -38,6 +38,37 @@
     </ul>
 
 <a href="./aboutme.html">About me</a>
+<hr>
+    <h2>Travel Recommendations</h2>
+    <p>Incredible India is the name of an international tourism campaign maintained by the Government of India.</p>
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Important location</th>
+            <th>Time to spent</th>
+            
+        </tr>
+        <tr>
+            <td>Delhi</td>
+            <td>RED FORT</td>
+            <td>2Hrs</td>
+        </tr>
+        <tr>
+            <td>Munnar</td>
+            <td>Tea Museum</td>
+            <td>1HRs</td>
+        </tr>
+        <tr>
+            <td>Kanyakumari</td>
+            <td>Vivekanadha Rock Memorial</td>
+            <td>1.5Hrs</td>
+        </tr>
+        <tr>
+            <td> Agra </td>
+            <td>Taj Mahal</td>
+            <td>3Hrs</td>
+        </tr>
+    </table>
 
 
 
