--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h1>Sai Geethika Garikapati</h1>
 </body>
-
+    <a href="./Bouns.html">BONUS</a>
     <h3> The Indian Museum</h3>
     <p>Some of the must watch things are  <b>Mughal Paintings</b> and <b>collections of antiques</b></p>
     <hr>
